- Improvement: New methods to check if shift and school class are free for a specific registration 
- Fix: Add coordinator responsible setter with primitive boolean param

30.5.1 (22-06-2020)
- Fix: Summaries control - sort intervals and fix course url site

30.5.0 (12-06-2020)
- New feature: Shifts extra capacity, used when its own is full

30.4.3 (09-06-2020)
- Improvement: Added code to ShiftCapacityType 

30.4.2 (01-06-2020)
- Fix: Better handling of execution courses attends merge
- Refactor: Comment unused Enrolment constructor and change default constructor visibility to protected

30.4.1 (21-05-2020)
- Improvement: Improved PermissionService
- Fix: Remove restriction for unique attends in an execution coruse within all registrations of a student

30.4.0 (20-05-2020)
- Improvement: added support for enrolment prefilter curricular rule level 
- Fix: Context intervals intersection should be with execution aggregators

30.3.1 (08-05-2020)
- Improvement: Add type getter/setter to BibliographicReference

30.3.0 (08-05-2020)
- Improvement: AdministrativeOffice coordinator not mandatory
- Fix: Bootstrap countries with english names
- Refactor: Clean unused configuration properties
- Refactor: Remove initialization of default shift capacities

30.2.0 (05-05-2020)
- Improvement: Moved AuthenticationRedirector to academic core

30.1.0 (02-05-2020)
- New feature: Allow force sending emails to institution address
- Improvement: Allow deletion of empty degree types
- Refactor: Optimize execution course name getter when english locale selected

30.0.0 (28-04-2020)
- New feature: Shifts capacity by type, and restricted to school classes or degree curricular plans

29.2.3 (27-04-2020)
- Bug Fix: Academic office student search should display degree type on active registrations 

29.2.2 (21-04-2020)
- Bug Fix: Avoid NPE searching for curricular period on degree curricular plan
- Bug Fix: Earth unit should have party type

29.2.1 (20-04-2020)